--- a/oship/src/oship/static/css/oship.css
+++ b/oship/src/oship/static/css/oship.css
@@ -1,18 +1,19 @@
-
-{
-	font-family: serif;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: normal;
-	font-stretch: normal;
-	color: #24451e;
-	background-color: #eaeae5;
-	word-spacing: normal;
-	letter-spacing: normal;
-	text-decoration: none;
-	vertical-align: middle;
-	text-transform: none;
-	text-align: center;
-	text-indent: inherit;
-	line-height: normal;
+body {
+	background-color: #E5E5E5;
+	font-family: arial, helvetica, sans-serif;
 }
+h2 {
+	color: #3A8F11;
+	font-family: arial, helvetica, sans-serif;
+}
+h3 {
+	color: #3A8F11;
+	font-family: arial, helvetica, sans-serif;
+}
+h4 {
+	color: #3A8F11;
+	font-family: arial, helvetica, sans-serif;
+}
+
+
+
